# generate-presentation

./: .env  README.markdown  check_template.py  my_presentation.pptx  pyproject.toml
generate_presentation/: llm.py  main.py  models.py  presentation_generator.py
generate_presentation/static/: index.html
templates/: template.pptx
tests/: test_main.py
