[tool.poetry]
name = "generate-presentation"
version = "0.1.0"
description = "Веб-приложение на FastAPI для генерации презентаций PowerPoint из JSON"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.1"
python-pptx = "^1.0.2"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"