[tool.poetry]
name = "generate-presentation"
version = "0.1.0"
description = "Веб-приложение на FastAPI для генерации презентаций с помощью LLM и API изображений"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.1"
python-pptx = "^1.0.2"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
openai = "^1.35.0"
loguru = "^0.7.2"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"